--- a/index.html
+++ b/index.html
@@ -13,39 +13,39 @@
 </head>
 
 <body>
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <!-- <a id="logo-container" href="#" class="brand-logo"><img src="assets/images/logo.jpg"></a> -->
-      <ul class="right hide-on-med-and-down">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="houses.html">Houses</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
 
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="houses.html">Houses</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
+  <ul id="slide-out" class="sidenav">
+    <li>
+      <div class="user-view">
+        <div class="background">
+          <img src="assets/images/sidebar.jpg">
+        </div>
+        <a href="#user"><img class="circle" src="assets/images/headshot.jpg"></a>
+        <a href="#name"><span class="white-text name">Lori Duerr</span></a>
+        <a href="#email"><span class="white-text email">loriduerr@kw.com</span></a>
+      </div>
+    </li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="houses.html">Houses</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center dark-text text-lighten-2" id="header">LORI DUERR REALTY</h1>
+        <h1 class="header center red-text text-lighten-2" id="header">LORI DUERR REALTY</h1>
         <div class="row center">
-          <h5 class="header col s12 light" id="header">ABOUT YOU OR MISSION STATEMENT HERE</h5>
+          <h5 class="header col s12 light red-text" id="header">ABOUT YOU OR MISSION STATEMENT HERE</h5>
         </div>
         <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="assets/images/background.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="assets/images/lawn.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">local_offer</i></h2>
+            <h2 class="center dark-text"><i class="material-icons">local_offer</i></h2>
             <h5 class="center">TITLE HERE</h5>
 
             <p class="light">Aliquam vitae nunc vel nunc venenatis iaculis aliquam eu est. Aliquam nec lectus eget enim
@@ -69,7 +69,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">attach_money</i></h2>
+            <h2 class="center dark-text"><i class="material-icons">attach_money</i></h2>
             <h5 class="center">TITLE HERE</h5>
 
             <p class="light">Aliquam vitae nunc vel nunc venenatis iaculis aliquam eu est. Aliquam nec lectus eget enim
@@ -82,7 +82,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">home</i></h2>
+            <h2 class="center dark-text"><i class="material-icons">home</i></h2>
             <h5 class="center">TITLE HERE
             </h5>
 
@@ -107,7 +107,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="assets/images/city.jpg" alt="Unsplashed background img 4"></div>
+    <div class="parallax"><img src="assets/images/invest.jpg" alt="Unsplashed background img 4"></div>
   </div>
 
   <div class="container">
@@ -116,15 +116,15 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>STATEMENT</h4>
-          <p class="left-align light">DESCRIPTION..................................................</p>
+          <h5>STATEMENT</h5>
+          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
       </div>
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>STATEMENT</h4>
-          <p class="left-align light">DESCRIPTION..................................................</p>
+          <h5>STATEMENT</h5>
+          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
       </div>
 
@@ -143,24 +143,25 @@
     <div class="parallax"><img src="assets/images/hand.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
-  <footer class="page-footer blue-grey">
+  <footer class="page-footer red">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">ABOUT THE COMPANY</h5>
-        <p class="grey-text text-lighten-4">DESCRIPTION...................................................................</p>
+          <p class="grey-text text-lighten-4">
+            DESCRIPTION...................................................................</p>
 
 
         </div>
         <div class="col l3 s12">
-            
-              <h5>Tel: 777-777-7777 </h5>
-              <h5>Fax: 888-888-8888 </h5>
-          
-          </div>
+
+          <h5>Tel: 777-777-7777 </h5>
+          <h5>Fax: 888-888-8888 </h5>
+
+        </div>
         <div class="col l3 s12">
           <ul>
-            <li><button class="btn btn-large waves-effect waves-light green" type="button" name="pickup"><a class="white-text text-lighten-3" href="http://lifecareemsga.wufoo.com/forms/m7x3q1/">Schedule Pick-Up</a></button></li>
+            <li><button class="btn btn-large waves-effect waves-light blue" type="button" name="call">Call Today!</button></li>
           </ul>
         </div>
       </div>
