--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <ul id="slide-out" class="sidenav">
+  <ul id="slide-out nav-mobile" class="sidenav">
     <li>
       <div class="user-view">
         <div class="background">
@@ -30,7 +30,8 @@
     <li><a href="houses.html">Houses</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+  <a href="#" data-target="slide-out nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+  
 
 
   <div id="index-banner" class="parallax-container">
