--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <ul id="slide-out" class="sidenav">
+  <ul id="slide-out nav-mobile" class="sidenav">
     <li>
       <div class="user-view">
         <div class="background">
@@ -29,7 +29,7 @@
     <li><a href="houses.html">Houses</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+  <a href="#" data-target="slide-out nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
   <div class="container">
     <div class="row">
