--- a/houses.html
+++ b/houses.html
@@ -11,7 +11,7 @@
   <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <ul id="slide-out" class="sidenav">
+  <ul id="slide-out nav-mobile" class="sidenav">
     <li>
       <div class="user-view">
         <div class="background">
@@ -27,7 +27,7 @@
     <li><a href="houses.html">Houses</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+  <a href="#" data-target="slide-out nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
   <div class="col s12 m7">
       <h2 class="header">HOUSE FOR SALE</h2>
