--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <br><br>
         <h1 class="header center red-text text-lighten-2" id="header">LORI DUERR REALTY</h1>
         <div class="row center">
-          <h5 class="header col s12 light red-text" id="header">ABOUT YOU OR MISSION STATEMENT HERE</h5>
+          <h5 class="header col s12 light red-text" id="header">Finding You That Forever Home</h5>
         </div>
         <br><br>
 
@@ -58,7 +58,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center dark-text"><i class="material-icons">local_offer</i></h2>
-            <h5 class="center">TITLE HERE</h5>
+            <h5 class="center">Search Homes</h5>
 
             <p class="light">Aliquam vitae nunc vel nunc venenatis iaculis aliquam eu est. Aliquam nec lectus eget enim
               maximus scelerisque eu quis odio. Vivamus eu velit egestas, accumsan purus eget, malesuada est. Duis
@@ -71,7 +71,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center dark-text"><i class="material-icons">attach_money</i></h2>
-            <h5 class="center">TITLE HERE</h5>
+            <h5 class="center">Financing</h5>
 
             <p class="light">Aliquam vitae nunc vel nunc venenatis iaculis aliquam eu est. Aliquam nec lectus eget enim
               maximus scelerisque eu quis odio. Vivamus eu velit egestas, accumsan purus eget, malesuada est. Duis
@@ -84,7 +84,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center dark-text"><i class="material-icons">home</i></h2>
-            <h5 class="center">TITLE HERE
+            <h5 class="center">Sell Your House
             </h5>
 
             <p class="light">Aliquam vitae nunc vel nunc venenatis iaculis aliquam eu est. Aliquam nec lectus eget enim
@@ -117,14 +117,14 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h5>STATEMENT</h5>
+          <h5>Are you looking for new construction?</h5>
           <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
       </div>
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h5>STATEMENT</h5>
+          <h5>Are you looking to find your home's value?</h5>
           <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
       </div>
